# CFFC

./: .gitignore  README.md
.dotest/: 0001  0002  final-commit  info  msg  patch
blkclib/: .gitignore  Makefile  README  config.status  configure  configure.ac  make.defs  make.defs.in
blkclib/include/: coord_transform.h
blkclib/src/: BlkC_block.h  BlkC_edge.h  BlkC_face.h  BlkC_parameters.h  BlkC_vertex.h  Pool_create.h  Sort.h  block_connectivity.cc  block_connectivity.h  hash.h  hash_map.h  mesh_neighbour.h
blkclib/test/: Makefile  testblkc.cc
bpkit/app/: bp.cc  c_example.c
bpkit/src/: BPKIT.h  BRelax.cc  BTIF.h  BlockMat.cc  BlockMat.h  CSRmath.cc  DenseMat.cc  DenseMat.h  arch.h  lapackd.h  makefile  sgesvd.f  spsm.cc
cantera/: .gitignore  Makefile  config.h  config.status  cvs2git_ignore  mt.mod  preconfig  temp
cantera/CVS/: Entries  Repository
cantera/Cantera/: Makefile
cantera/examples/: Makefile
cantera/ext/: Makefile
cantera/test_problems/: Makefile  Makefile.in
cantera/tools/: Makefile  Makefile.in
cfrs/: .gitignore
cfrs/Test_Cases/: .gitignore
cfrs/miscellaneous/: 2DIntegration.m  GaussIntegration.cc  GaussLegendreQuadPoints  GaussLegendreQuadraturePoints.cc  Householder.m  HouseholderTest.m  Revert_Git_File.py  Ringleb_flow.cc  TestFunction2D.m  Update_SourceRevision_Data.py  function_graph.cc  rmlots  testResidual.py  test_solution.m
cfrs/src/: main.cc  makefile  makefile.def
data/CANTERA/: CH4.xml
data/CANTERA_RXNS/: CH4.cti  CH4.xml  README  air.cti  air.xml  gri30.cti  gri30.xml  gri30_noNOX.cti  gri30_noNOX.xml  h2o2.cti  h2o2.xml
data/NASARP1311/: thermo.inp  trans.inp
examples/Chem2D/: Chem2D_Input_Param.in  NKS_Input_Parameters.in
examples/Euler1D/: AcousticShockProblem.in  BlastWaveInteractionProblem.in  cffc.in  rarefaction.in  sod.in
examples/Gaussian2D/: cylinder_mach0.128_Kn0.01.in  flat_plate.in
examples/Heat1D/: cffc.in
examples/HyperHeat1D/: cffc.in
examples/MHD1D/: cffc.in
examples/Rte2D/: NKS_Input_Parameters.in  Rte2D_Input_Param.in  run_tests.sh  test.in
examples/Scalar1D/: cffc.in
fftw/: .gitignore  ChangeLog  Makefile.in  aclocal.m4  config.h.in  configure  fftw3.pc
fftw-3.2alpha2/: Makefile  config.h  config.status  fftw.pc  fftw3.pc  libtool
fftw-3.2alpha2/api/: Makefile
fftw-3.2alpha2/cell/: Makefile
fftw-3.2alpha2/dft/: Makefile
fftw-3.2alpha2/doc/: Makefile
fftw-3.2alpha2/genfft/: Makefile
fftw-3.2alpha2/kernel/: Makefile
fftw-3.2alpha2/lib/: libfftw3.la
fftw-3.2alpha2/libbench2/: Makefile
fftw-3.2alpha2/mpi/: Makefile
fftw-3.2alpha2/rdft/: Makefile
fftw-3.2alpha2/reodft/: Makefile
fftw-3.2alpha2/simd/: Makefile
fftw-3.2alpha2/support/: Makefile
fftw-3.2alpha2/tests/: Makefile  Makefile.in
fftw-3.2alpha2/threads/: Makefile
fftw-3.2alpha2/tools/: Makefile  fftwf-wisdom.1
fftw/api/: Makefile.in
fftw/cell/: Makefile.in
fftw/dft/: Makefile.in
fftw/doc/: Makefile.in  fftw3.info  stamp-vti
fftw/genfft/: Makefile.in
fftw/kernel/: Makefile.in
fftw/lib/: libfftw3.la
fftw/libbench2/: Makefile.in
fftw/mpi/: Makefile.in
fftw/rdft/: Makefile.in
fftw/reodft/: Makefile.in
fftw/simd/: Makefile.in
fftw/support/: Makefile.in
fftw/threads/: Makefile.in
fftw/tools/: Makefile.in
lib/TUT/: Test_Run.cc  Test_Run.h  tut.h  tut_reporter.h
lib/sparselib++/: makefile
miscellaneous/: Update_SourceRevision_Data.py  norms.txt  testOutput.py
miscellaneous/AMR/: AMR_Criterium.fig
sparselib++/: makefile  makefile.def
sparselib++/include/: ilupre_double.h  spblas.h  tmvec.h
sparselib++/spblas/: makefile
sparselib++/src/: comprow_double.cc  diagpre_double.cc  ilupre_double.cc  iohb.c  makefile
sparselib++/testing/: makefile
src/: main.cc  makefile  makefile.def
src/Common/: SourceRevisionData.cc  SourceRevisionData.h
src/Math/: LinearSystems.h  NumericalLibrary.cc  Vector3D.h
src/Reconstruction/: CENO_DataAnalysis.h  ComputationalDomain.h  ComputationalDomain_Implementations.h
src/TestFunctions/: TestFunctions.h  TestFunctions_2D.h  TestFunctions_3D.cc
src/include/: ComputationalCell.h
src_2D/: cffc2D.cc  license.txt  makefile  makefile.def
src_2D/AMR/: AMR.h  AMR.h_old  AdaptiveBlock.cc  AdaptiveBlock.h  AdaptiveBlock2D_MessagePassing.backup.h  AdaptiveBlock2D_MessagePassing.h  AdaptiveBlock_MPI.cc  AdaptiveBlock_NoMPI.cc  QuadTree.cc  QuadTree.h  QuadTree_Morton.h
src_2D/AdvectDiffuse2D/: AdvectDiffuse2D.cc  AdvectDiffuse2DAccuracyAssessment.h  AdvectDiffuse2DAccuracyAssessmentMultiBlock.h  AdvectDiffuse2DExactSolutions.cc  AdvectDiffuse2DExactSolutions.h  AdvectDiffuse2DInflowField.cc  AdvectDiffuse2DInflowField.h  AdvectDiffuse2DInput.cc  AdvectDiffuse2DInput.h  AdvectDiffuse2DParameterFields.h  AdvectDiffuse2DQuad.cc  AdvectDiffuse2DQuad.h  AdvectDiffuse2DQuadFASMultigrid.h  AdvectDiffuse2DQuadGrid.cc  AdvectDiffuse2DQuadMultiBlock.cc  AdvectDiffuse2DQuadMultigrid.h  AdvectDiffuse2DQuadNKS.h  AdvectDiffuse2DQuadSingleBlock.cc  AdvectDiffuse2DQuadSolvers.cc  AdvectDiffuse2DQuad_GMRES.h  AdvectDiffuse2DQuad_HighOrder.cc  AdvectDiffuse2DQuad_NKS.cc  AdvectDiffuse2DQuad_NKS.h  AdvectDiffuse2DState.cc  AdvectDiffuse2DState.h  AdvectDiffuse2D_Cauchy_BCs.h  DiffusionFields.cc  DiffusionFields.h  ExactSolutions.cc  ExactSolutions.h  InflowFields.cc  InflowFields.h  New_AdvectDiffuse2DQuad.cc  New_AdvectDiffuse2DQuad.h  New_AdvectDiffuse2DQuadMultiBlock.cc  New_AdvectDiffuse2DQuadSingleBlock.cc  New_AdvectDiffuse2DQuadSolvers.cc  New_AdvectDiffuse2DState.cc  New_AdvectDiffuse2DState.h  SourceFields.cc  (+5 more)
src_2D/BGK1D/: BGK1D.cc  BGK1D.h  BGK1DMain.cc  BGK1DSolvers.cc  BGK1DVector.cc  BGK1DVector.h
src_2D/CFD/: CFD.cc  CFD.h  CFD1DInput.cc  CFD1DInput.h  EllipticOperatorAnalysis2D.h
src_2D/Chem2D/: 15step_GRI211.f  Chem2D.cc  Chem2DInput.cc  Chem2DInput.h  Chem2DQuad.cc  Chem2DQuad.h  Chem2DQuadGrid.cc  Chem2DQuadMultiBlock.cc  Chem2DQuadMultigrid.h  Chem2DQuadNKS.h  Chem2DQuadRte.h  Chem2DQuadSingleBlock.cc  Reactions.h  (+12 more)
src_3D/: cffc3D.cc  conflicts.txt  howtosleep.cc  license.txt  makefile  makefile.def
tut/: README_CFFC
(+3392 files in other folders)
